fixed whitespace sidebar error of text collapsing and quicklinks button on intro of index page

--- a/css/style.css
+++ b/css/style.css
@@ -588,7 +588,6 @@ section h1 {
 /******imported classes **********/
 
 #menu_bar {
-  display: block;
   position: fixed;
   top: 0;
   left: 0;
@@ -627,26 +626,36 @@ section h1 {
 .get-our-app {
   margin-left: 5%;
   position: relative;
-  margin-top: 60%;
+  top: 35%;
   max-width: 350px;
   margin-right: auto;
   display: block;
-  opacity: 0;
-  bottom: 0;
+  opacity: 1;
+  bottom: 100px;
   transition: opacity 1.5s ease-in;
+  white-space: normal;
 }
 .opacity_visible {
   opacity: 1;
 }
 .get-our-app h3 {
   font-size: 0.9em;
+  white-space: normal;
+  width: 300px;
+  display: block;
 }
 .get-our-app p {
   color: var(--next-primary-color);
+  white-space: normal;
+  width: 350px;
+  display: block;
 }
+
 .appstore-icon img {
-  max-width: 220px;
+  width: 220px;
   cursor: pointer;
+  display: block;
+  white-space: normal;
 }
 
 @media (min-width: 600px) {
@@ -1274,6 +1283,7 @@ section h1 {
   overflow-x: hidden;
   transition: width 2s ease, right 1.2s ease;
   box-shadow: 0px 0px 4px 0px rgba(15, 15, 15, 0.9);
+  white-space: nowrap;
 }
 .toggle-width {
   width: 100%;
@@ -1289,10 +1299,11 @@ section h1 {
 .contact_us .content {
   position: relative;
   top: 5%;
-  width: 100%;
-  max-width: 700px;
+  width: 320px;
   margin-inline: auto;
   margin-top: 1em;
+  white-space: normal;
+  display: block;
 }
 
 .contact_us h3 {
@@ -1334,14 +1345,15 @@ section h1 {
   font-size: 0.6em;
   margin-top: 0.2em;
   margin-bottom: 1em;
-  font-weight: 500;
+  font-weight: bold;
 }
 .contact_information .box p {
   margin-bottom: 0;
-  line-height: 1.2;
-  font-weight: 400;
+  line-height: 1.4;
+  font-weight: 300;
   font-size: 0.6rem;
-  color: var(--black-color);
+  color: var(--white-color);
+  white-space: normal;
 }
 
 .contact_us .form-container {
@@ -1352,7 +1364,6 @@ section h1 {
 }
 .contact_us .form-container .max-width {
   line-height: 1.4;
-  max-width: 300px;
   margin-inline: auto;
 }
 .contact_us .form-container {
@@ -1410,6 +1421,9 @@ section h1 {
 @media (min-width: 600px) {
   .contact_us .contact_information {
     max-width: 500px;
+  }
+  .contact_us .content {
+    width: 400px;
   }
   .contact_us .contact_information .box {
     width: 30%;
@@ -1501,8 +1515,12 @@ section h1 {
   .toggle-width {
     width: 60%;
   }
+
+  .contact_us .content {
+    width: 450px;
+  }
   .contact_us h3 {
-    font-size: 1.6em;
+    font-size: 1.75em;
   }
 
   .contact_us .contact_information {
@@ -1518,7 +1536,7 @@ section h1 {
   }
 
   .contact_us h3.small-font {
-    font-size: 0.8em;
+    font-size: 1em;
   }
 
   .contact_us .form-container .max-width,
@@ -1566,10 +1584,30 @@ section h1 {
   }
   .contact_information .box p {
     font-weight: 500;
-    font-size: 0.55em;
+    font-size: 0.53em;
   }
+
+  /******NEW CSS SOLUTION*******/
+
+  .contact_information .box p {
+    white-space: normal;
+    display: block;
+  }
+
+  .contact_us .form-container .max-width {
+    white-space: normal;
+  }
+  /******NEW CSS SOLUTION ENDS*******/
 }
 
+@media (min-width: 1600px) {
+  .toggle-width {
+    width: 35%;
+  }
+  .contact_us .content {
+    width: 500px;
+  }
+}
 @media (min-width: 1800px) {
   .toggle-width {
     width: 35%;
@@ -1994,17 +2032,20 @@ footer .bottom-footer ul li a span {
   display: -ms-flexbox;
   display: -webkit-flex;
   display: flex;
-  flex-direction: row;
+  flex-direction: column;
   align-items: center;
+  width: 70%;
 }
 .picture-content-wrapper .flex-row div {
   width: 100%;
-  display: block;
+  display: flex;
+  flex-direction: row;
 }
 .picture-content-wrapper .flex-row a {
-  width: 100%;
+  width: 50%;
   text-align: center;
-  display: block;
+  padding: 1.2em 2em;
+  text-align: center;
 }
 .picture-content-wrapper .flex-row .bg-primary-color {
   background-color: rgb(33, 78, 113);
@@ -2014,22 +2055,27 @@ footer .bottom-footer ul li a span {
   background-color: rgb(239, 239, 239);
   background-color: rgba(239, 239, 239, 0.8);
 }
-.picture-content-wrapper .flex-row h5 {
+.picture-content-wrapper .flex-row a span {
   font-size: 0.9em;
   width: 100%;
-  max-width: 60px;
-  margin-inline: auto;
-  text-align: center;
+  max-width: 50px;
+  margin-left: -30px;
+  text-align: left;
   margin-top: 0;
   margin-bottom: 0;
-  padding: 1em 0.5em;
-  line-height: 1.4;
+  line-height: 1.1;
   font-weight: 500;
+  display: inline-block;
 }
 
 @media (min-width: 600px) {
   .picture-content-wrapper .flex-row a {
-    padding: 0.5em 0.5em;
+    padding: 2em 2em;
+  }
+  .picture-content-wrapper .flex-row a span {
+    font-size: 1.1em;
+    margin-left: -30px;
+    line-height: 1.2;
   }
 }
 
@@ -2057,19 +2103,6 @@ footer .bottom-footer ul li a span {
     max-width: 500px;
     height: auto;
   }
-  .picture-content-wrapper .flex-row a {
-    padding: 0.5em 1em;
-  }
-  .picture-content-wrapper .flex-row h5 {
-    font-size: 1.25em;
-    width: 100%;
-    max-width: 100px;
-    margin-inline: auto;
-    text-align: center;
-    padding: 1em 0.5em;
-    line-height: 1.4;
-    font-weight: 500;
-  }
 }
 @media (min-width: 992px) {
   #intro .align-start {
@@ -2091,17 +2124,17 @@ footer .bottom-footer ul li a span {
     margin-inline: auto 0;
   }
   .picture-content-wrapper .button-cotainer {
-    width: 60%;
-    max-width: 500px;
+    width: 70%;
+    max-width: 700px;
     height: auto;
   }
+
   .picture-content-wrapper .flex-row a {
-    padding: 0.25em 0.5em;
+    padding: 1.5em 2.5em;
   }
-  .picture-content-wrapper .flex-row h5 {
-    font-size: 1.25em;
-    padding: 0.5em;
-    line-height: 1.2;
+  .picture-content-wrapper .flex-row a span {
+    font-size: 1em;
+    margin-left: -50px;
   }
 }
 
@@ -2114,14 +2147,6 @@ footer .bottom-footer ul li a span {
   }
   .picture-content-wrapper .button-cotainer {
     max-width: 550px;
-  }
-  .picture-content-wrapper .flex-row a {
-    padding: 0.5em 0.5em;
-  }
-  .picture-content-wrapper .flex-row h5 {
-    font-size: 1.25em;
-    padding: 1em 0.5em;
-    line-height: 1.2;
   }
 }
 
